// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress > renders 0% value 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
</DocumentFragment>
`;

exports[`Progress > renders 50% value 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-50%);"
    />
  </div>
</DocumentFragment>
`;

exports[`Progress > renders 100% value 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-0%);"
    />
  </div>
</DocumentFragment>
`;

exports[`Progress > renders without value (undefined) 1`] = `
<DocumentFragment>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative h-4 w-full overflow-hidden rounded-full bg-secondary"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
</DocumentFragment>
`;
